fix: 文件操作bug
