# server/docs/swagger.json
@@ -40,9 +40,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"success\":true,\"data\":{},\"msg\":\"账号初始化成功\"}",
+                        "description": "成功后返回值",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/response.FileInfo"
                         }
                     }
                 }
@@ -71,9 +71,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"success\":true,\"data\":{},\"msg\":\"账号初始化成功\"}",
+                        "description": "成功后返回值",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/response.FileInfo"
                         }
                     }
                 }
@@ -100,9 +100,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"success\":true,\"data\":{},\"msg\":\"账号初始化成功\"}",
+                        "description": "成功后返回值",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/response.FileInfo"
                         }
                     }
                 }
@@ -110,7 +110,7 @@
         },
         "/repo/info": {
             "get": {
-                "description": "获取仓库信息，没有则初始化仓库",
+                "description": "获取仓库信息，没有则初始化仓库，并返回.shownote/workspace.json的内容",
                 "tags": [
                     "仓库"
                 ],
@@ -133,9 +133,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"success\":true,\"data\":{},\"msg\":\"账号初始化成功\"}",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/response.FileInfo"
                         }
                     }
                 }
@@ -218,6 +218,38 @@
                     "type": "string"
                 },
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.FileInfo": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "download_url": {
+                    "type": "string"
+                },
+                "html_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "sha": {
+                    "type": "string"
+                },
+                "size": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "url": {
                     "type": "string"
                 }
             }
